<resources>
    <string name="app_name">Implicit Intent</string>

    <string name="editText_url">http://developer.android.com</string>
    <string name="button_url">Open Website</string>

    <string name="editText_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="editText_share">Twas brillig and the slithy toves</string>
    <string name="button_share">Share this text</string>

    <string name="button_picture">Take a picture</string>
</resources>
