<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.guillaumegonnet.implicitintent.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/urlText_main"
        android:text="@string/editText_url" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_website_button"
        android:text="@string/button_url"
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationText_main"
        android:text="@string/editText_loc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_location_button"
        android:text="@string/button_loc"
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shareText_main"
        android:text="@string/editText_share" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_share"
        android:text="@string/button_share"
        android:layout_marginBottom="24dp"
        android:onClick="shareText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_photo"
        android:text="@string/button_picture"
        android:onClick="takePicture"/>

</LinearLayout>